--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,9 @@
 }
 
 body {
-  background: -webkit-gradient(linear, left top, right top, from(#bdc3c7), to(#2c3e50));
-  background: linear-gradient(to right, #bdc3c7, #2c3e50);
+  background: -webkit-gradient(linear, left top, right top, from(#4ca1af), to(#c4e0e5));
+  background: linear-gradient(to right, #4ca1af, #c4e0e5);
+  color: white;
   min-height: 100vh;
   display: -ms-grid;
   display: grid;
@@ -34,10 +35,8 @@ body {
   font-size: 2rem;
   padding: 0.5rem 1rem;
   border-radius: 1rem;
-  border: 1px solid black;
+  border: none;
   cursor: pointer;
-  background: -webkit-gradient(linear, right top, left top, from(#bdc3c7), to(#2c3e50));
-  background: linear-gradient(to left, #bdc3c7, #2c3e50);
 }
 
 .container .button button:active {
