--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,8 @@
 }
 
 body{
-    background: linear-gradient(to right,#bdc3c7, #2c3e50);
+    background: linear-gradient(to right,#4ca1af, #c4e0e5);
+    color: white;
     min-height: 100vh;
     display: grid;
     place-items: center;
@@ -29,9 +30,8 @@ body{
             font-size: 2rem;
             padding: 0.5rem 1rem;
             border-radius: 1rem;
-            border: 1px solid black;
+            border: none;
             cursor: pointer;
-            background: linear-gradient(to left,#bdc3c7, #2c3e50);
             &:active{
                 color: white;
                 background-color: black;
